# vadgr-computer-use

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  NOTICE  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
E2E/: README.md
E2E/0.4.0/: e2e.md
E2E/0.4.1/: e2e.md
E2E/0.5.0/: e2e.md
E2E/0.6.0/: e2e.md
E2E/0.6.1/: e2e.md
computer_use/: KNOWN_BUGS.md  README.md  __init__.py  config.yaml  mcp_server.py  requirements.txt  setup-linux.sh
computer_use/bridge/: actions.py  client.py  daemon.py  deployer.py  supervisor.py
computer_use/browser/: __init__.py  bridge.py  native_host.py  protocol.py  server.py  tool.py  upload.py
computer_use/browser/winhost/: README.md  __init__.py  go.mod  main.go
computer_use/core/: __init__.py  actions.py  decorator.py  engine.py  errors.py  loop.py  ops.py  registry.py  risk.py  screenshot.py  smooth_move.py  spatial_cache.py  tier.py  tool.py  types.py
computer_use/core/middleware/: __init__.py  auth.py  base.py  chain.py  denylist.py  redaction.py  telemetry.py
computer_use/grounding/: accessibility.py
computer_use/platform/: base.py  linux.py  linux_providers.py  macos.py  portal.py  providers.py  registry.py  resolver.py  windows.py  wsl2.py
computer_use/platform/backends/: __init__.py  linux_providers.py  portal.py  uinput.py  xtest.py
computer_use/platform/resolver/: __init__.py  engine.py  providers.py  registry.py  session.py
computer_use/providers/: anthropic.py  base.py  openai.py
computer_use/setup/: __init__.py  deps.py  extension_setup.py
computer_use/setup/udev/: 99-vadgr-uinput.rules
computer_use/tests/: conftest.py  test_actions.py  test_anthropic_provider.py  test_bridge.py  test_browser_bridge.py  test_browser_native_host.py  test_browser_protocol.py  test_browser_registration.py  test_browser_server.py  test_browser_tool.py  test_browser_upload.py  test_cli_commands.py  test_core_loop.py  test_core_middleware.py  test_core_registry.py  test_deployer.py  test_deps.py  test_detect.py  test_doctor_registry.py  test_engine.py  test_extension_setup.py  test_linux.py  test_linux_providers.py  test_loop.py  test_macos.py  test_mcp_server.py  test_openai_provider.py  test_ops.py  test_portal.py  test_resolver.py  test_session.py  test_smooth_move.py  test_spatial_cache.py  test_supervisor.py  test_tier0_tools.py  test_tool_migration.py  test_types.py  test_uinput.py  test_v010_surface.py  test_windows.py  (+2 more)
computer_use/tools/: __init__.py
computer_use/tools/system/: __init__.py  clipboard.py  data.py  env.py  fs.py  http.py  shell.py  tempfile.py  time.py
extension/: README.md  build.mjs  manifest.json  offscreen.html  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  offscreen.ts  ops.ts  protocol.ts  reconnect.ts  router.ts
extension/src/content/: actionable.ts  errors.ts  fill.ts  index.ts  ops.ts
extension/src/executors/: cdp.ts  escalation.ts  types.ts
extension/tests/: actionable.test.ts  cdp.test.ts  cdp_ops.test.ts  content_ops.test.ts  enumeration.test.ts  escalation.test.ts  fill.test.ts  lifecycle.test.ts  loud_loss.test.ts  ops.test.ts  owned_window.test.ts  profile.test.ts  profiles_op.test.ts  query_cap.test.ts  reconnect.test.ts  registry.test.ts  resolver.test.ts  router.test.ts  self_heal.test.ts  trusted_click.test.ts  unwrap.test.ts  window_tabs.test.ts
