[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vadgr-computer-use"
version = "0.1.3"
description = "Local-first MCP server for desktop automation: screenshots, mouse, keyboard"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Santiago Montaño Diaz"}]
keywords = ["mcp", "computer-use", "automation", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "mcp>=1.0",
    "pillow>=10",
    "mss>=9",
    "jeepney>=0.8; sys_platform == 'linux'",
    "evdev>=1.6; sys_platform == 'linux'",
]

[project.optional-dependencies]
linux-atspi = ["PyGObject>=3.50"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.1"]

[project.scripts]
vadgr-cua = "computer_use.mcp_server:main"

[project.urls]
Homepage = "https://github.com/MONTBRAIN/vadgr-computer-use"
Repository = "https://github.com/MONTBRAIN/vadgr-computer-use"
Issues = "https://github.com/MONTBRAIN/vadgr-computer-use/issues"

[tool.setuptools.packages.find]
include = ["computer_use*"]
exclude = ["computer_use.tests*"]

[tool.pytest.ini_options]
testpaths = ["computer_use/tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E402: daemon.py sets DPI awareness before Win32 imports on purpose.
extend-ignore = ["E402", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"computer_use/tests/*" = ["F401"]
