[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vadgr-computer-use"
version = "0.6.0"
description = "Local-first MCP server for desktop automation: screenshots, mouse, keyboard"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Santiago Montaño Diaz"}]
keywords = ["mcp", "computer-use", "automation", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
# One install — all tiers, the right deps per OS (no extras). See
# ARCHITECTURE.md §5.5: `pip install vadgr-computer-use` pulls pixel + browser +
# structured + stealth; per-OS env markers gate the accessibility deps so each
# platform installs only what applies. The browser tier is stdlib sockets + the
# bundled native-host relay (package data) — the extension is NOT a pip dep.
dependencies = [
    "mcp>=1.0",
    "pillow>=10",
    "mss>=9",
    "nodriver>=0.40",                                                   # stealth (all OSes)
    "python-xlib>=0.33; sys_platform == 'linux'",                       # pixel — X11 input via XTEST (pure-python, no xdotool)
    "jeepney>=0.8; sys_platform == 'linux'",                            # pure-python D-Bus
    "dbus-fast>=2.21; sys_platform == 'linux'",                         # structured — Linux AT-SPI (pure-python D-Bus, NOT pygobject)
    "pywinauto>=0.6.8; sys_platform == 'win32'",                        # structured — Windows UIA
    "pyobjc-framework-Quartz>=10; sys_platform == 'darwin'",            # pixel — macOS
    "pyobjc-framework-ApplicationServices>=10; sys_platform == 'darwin'",  # structured — macOS AX
]

[project.optional-dependencies]
data-yaml = ["pyyaml>=6"]
# Linux uinput via the python-evdev package. Optional because evdev is sdist-only
# (needs a C toolchain): the default input fallback is the pure-python uinput
# writer in computer_use.platform.uinput, so a plain `pip install` never needs a
# compiler. Install this only to use the evdev-backed path.
linux-uinput = ["evdev>=1.6; sys_platform == 'linux'"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.1"]

[project.scripts]
vadgr-cua = "computer_use.mcp_server:main"
vadgr-cua-host = "computer_use.browser.native_host:main"

[project.urls]
Homepage = "https://github.com/MONTBRAIN/vadgr-computer-use"
Repository = "https://github.com/MONTBRAIN/vadgr-computer-use"
Issues = "https://github.com/MONTBRAIN/vadgr-computer-use/issues"

[tool.setuptools.packages.find]
include = ["computer_use*"]
exclude = ["computer_use.tests*"]

[tool.setuptools.package-data]
# The Windows relay shim Chrome spawns on Windows when cua runs in WSL — shipped
# as a prebuilt binary (no Python on Windows). Built from winhost/main.go.
"computer_use.browser.winhost" = ["vadgr-cua-host.exe"]
# The udev rule `vadgr-cua install-deps` installs so /dev/uinput is writable by
# the 'input' group (the pure-python uinput fallback needs this).
"computer_use.setup" = ["udev/*.rules"]

[tool.pytest.ini_options]
testpaths = ["computer_use/tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E402: daemon.py sets DPI awareness before Win32 imports on purpose.
extend-ignore = ["E402", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"computer_use/tests/*" = ["F401"]
